--- a/sencha-workspace/packages/slate-cbl-baxter/sass/etc/_level-colors.scss
+++ b/sencha-workspace/packages/slate-cbl-baxter/sass/etc/_level-colors.scss
@@ -26,7 +26,7 @@ $level-colors-light: dynamic(
     #0040ff, // 9
     #0040ff, // 10
     #0040ff, // 11
-    #0040ff // 12
+    #0040ff  // 12
 );
 
 $level-colors-medium: dynamic(
@@ -41,7 +41,7 @@ $level-colors-medium: dynamic(
     #0040ff, // 9
     #0040ff, // 10
     #0040ff, // 11
-    #0040ff // 12
+    #0040ff  // 12
 );
 
 $level-colors-dark: dynamic(
@@ -56,75 +56,12 @@ $level-colors-dark: dynamic(
     #0040ff, // 9
     #0040ff, // 10
     #0040ff, // 11
-    #0040ff // 12
+    #0040ff  // 12
 );
 
-$g: dynamic('cbl-grid');
-
-
-.#{$g}-legend-item {
-    border-radius: 3px;
-    display: inline-block;
-    margin-right: .25em;
-    padding: .25em .5em;
-    width: 2.5em;
-}
-
-.#{$g}-progress-percent {
-    alpha: 0;
-}
-.#{$g}-progress-average {
-    display: none;
-}
-
-@for $n from 1 through length($level-colors) {
-    // color demo cells based on rating
-    .cbl-skill-demo,
-    .cbl-grid-demo {
-        &.cbl-rating-#{$n} {
-            background-color: nth($level-colors, $n) !important;
-        }
-    }
-
-    // TODO: extract this to a mixin that can be loaded from slate-cbl package?
-    .cbl-level-#{$n} {
-        $level-color:        nth($level-colors,        $n);
-        $level-color-light:  nth($level-colors-light,  $n);
-        $level-color-medium: nth($level-colors-medium, $n);
-        $level-color-dark:   nth($level-colors-dark,   $n);
-
-        &.level-color {
-            @extend .level-n;
-            background-color: $level-color !important;
-        }
-
-        &.#{$g}-progress-cell {
-            background-color: $level-color-light !important;
-        }
-
-        .#{$g}-progress-bar {
-            @include background-image(linear-gradient(
-                $level-color,
-                $level-color-dark
-            ));
-        }
-
-        .#{$g}-demo {
-            &:hover,
-            &:focus {
-                box-shadow: inset 0 0 0 2px $level-color-light;
-            }
-
-            &.#{$g}-demo-missing {
-                background-color: mix($text-color, $page-bg-color, 17%);
-                color: mix($text-color, $page-bg-color, 67%);
-                font-weight: normal;
-                text-shadow: none;
-            }
-
-            &.#{$g}-demo-counted {
-                background-color: $level-color-medium;
-            }
-        }
-    }
-}
+@include level-colors(
+    $level-colors,
+    $level-colors-light,
+    $level-colors-medium,
+    $level-colors-dark
+);
