feat: re-apply rating-based colors

--- a/sencha-workspace/packages/slate-cbl-baxter/sass/etc/_colors.scss
+++ b/sencha-workspace/packages/slate-cbl-baxter/sass/etc/_colors.scss
@@ -65,3 +65,10 @@ $level-colors-dark: dynamic(
     $level-colors-medium,
     $level-colors-dark
 );
+
+@include rating-colors(
+    $level-colors,
+    $level-colors-light,
+    $level-colors-medium,
+    $level-colors-dark
+);
